<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
        <EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dip" android:id="@+id/searchText" android:hint="@string/search_hint">
            <requestFocus></requestFocus>
        </EditText>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/searchButton" android:text="@string/search_button"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sortLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_sort_label"
            android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="center"/>

        <Spinner
            android:id="@+id/sortBy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>    
</LinearLayout>
