
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/filter_name" />

        <EditText
            android:id="@+id/filter_name"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/subreddit_name" />

        <EditText
            android:id="@+id/subreddit_name"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="4"
            android:text="@string/filter_text" />

        <Button
            android:id="@+id/filter_addbtn"
            android:layout_width="317dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="bottom"
            android:layout_row="5"
            android:text="@string/save" />

        <EditText
            android:id="@+id/filter_text"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:singleLine="true" />

        <Space
            android:layout_width="1dp"
            android:layout_height="21dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />

        <Space
            android:layout_width="135dp"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_row="0" />

    </GridLayout>
